tests/ui/parser/missing-closing-generics-bracket.stderr
error: expected one of `+`, `,`, `::`, `=`, or `>`, found `(`
  --> $DIR/missing-closing-generics-bracket.rs:7:25
   |
LL | fn foo<T: Trait<'static>() {}
   |                         ^ expected one of `+`, `,`, `::`, `=`, or `>`
   |
help: you might have meant to end the type parameters here
   |
LL | fn foo<T: Trait<'static>>() {}
   |                         +

error: aborting due to 1 previous error

